# Audience-Intelligence-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  CURRENT_STATUS.md  audience_intelligence_blueprint_v2.docx  audience_intelligence_spec_v3.docx  settings.local.json  spec-source.md
.claude/commands/: build-file.md  create-spec.md  db-check.md  debug.md  ml-check.md  phase-commit.md  phase-ship.md  phase-start.md  test-gen.md  validate-phase.md
.claude/project_context/: 00_global.md  01_data_context.md  02_ml_context.md  03_api_context.md  04_infra_context.md  05_decisions.md  06_session_recovery.md  07_loading_matrix.md
.claude/project_journal/: phase03-synthetic-data.md
.claude/specs/: database-schema-spec.md  master-specification.md  phase03-synthetic-data.md  system_design-spec.md
Text files/: phase02-database-schema.md
alembic/: env.py
alembic/versions/: 20260531_d65666c751dc_initial_schema.py  20260601_a1b2c3d4e5f6_initial_schema.py
app/core/: config.py  database.py  logging.py  security.py
configs/: base.yaml  dev.yaml  prod.yaml
configs/clients/: example.yaml
project_journal/: ARCHITECTURE_OVERVIEW.md  CURRENT_STATUS.md  DECISION_LOG.md  DEVELOPMENT_WORKFLOW.md  GLOSSARY.md  LEARNINGS.md  PROJECT_HISTORY.md  PROJECT_VISION.md  README.md  REPLICATION_GUIDE.md
project_journal/specifications/: system_design_summary.md  (+1 more)
requirements/: airflow.txt  base.txt  dev.txt  prod.txt
scripts/: run_migrations.py  validate_features.py
tests/: conftest.py
(+47 files in other folders)
